add session timeout feature (using pusher service)

--- a/UI/src/index.html
+++ b/UI/src/index.html
@@ -7,6 +7,7 @@
 	<body>
 		<div id="app"></div>
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRmEUUVnLQasEnm_w5tK06uUJxvtwaclM"></script>
+		<script src="https://js.pusher.com/4.0/pusher.min.js"></script>
 		<script type="text/javascript" src="app.js"></script>
 	</body>
 </html>
