--- a/UI/src/index.html
+++ b/UI/src/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>PRAGMA Cloud Resource Reservation System</title>
+		<title>PRAGMA EJ Test</title>
 	</head>
 	<body>
 		<div id="app"></div>
